Fixed spacing

--- a/template/css/PITCHME.css
+++ b/template/css/PITCHME.css
@@ -73,7 +73,8 @@
 
 /** Image Template Styles ***/
 .navImg {
-  height: 200px;
+  height: 350px;
+  margin: 1em;
 }
 
 
